fix: scrollbar

--- a/src/components/CommentsList/CommentList.module.sass
+++ b/src/components/CommentsList/CommentList.module.sass
@@ -10,9 +10,9 @@
   scrollbar-color: rgba(0, 0, 0, 0.3) transparent
 
   &::-webkit-scrollbar-button
-    display: none /* Скрываем кнопки */
-    height: 0  /* Убираем высоту */
-    width: 0   /* Убираем ширину */
+    display: none !important
+    height: 0 !important
+    width: 0  !important
 
   //border: 1px solid lighten($shades1,30)
   //box-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.05)
