--- a/src/styles/common.sass
+++ b/src/styles/common.sass
@@ -1,4 +1,21 @@
 // common styles
+*
+    scrollbar-width: thin
+    scrollbar-color: rgba(0, 0, 0, 0.3) transparent
+    &::-webkit-scrollbar-track
+        background: transparent !important
+    &::-webkit-scrollbar-thumb
+        background: rgba(0, 0, 0, 0.3) !important
+        border-radius: 3px !important
+        border: none !important
+    &::-webkit-scrollbar-button:vertical:start:decrement,
+    &::-webkit-scrollbar-button:vertical:end:increment,
+    &::-webkit-scrollbar-button:horizontal:start:decrement,
+    &::-webkit-scrollbar-button:horizontal:end:increment
+        display: none !important
+    &::-webkit-scrollbar
+        width: 5px
+
 body
     overflow-x: hidden
     min-width: 375px
